# HSRCard

./: .gitignore  pyproject.toml
hsrcard/: hsr.py
hsrcard/src/generator/: background.py  stats.py
hsrcard/src/tools/: pill.py
