[tool.poetry]
name = "hsrcard"
version = "1.0.2"
description = "Module for generating Honkai Star Rail character cards"
authors = ["None"]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/DEViantUA/StarRailCard"
homepage = "https://github.com/DEViantUA/StarRailCard"

keywords = ["honkai", "cards", "generation", "honkaistarraill","raill", "starraill", "builds"] 

[tool.poetry.dependencies]
Pillow = "^10.0.1"
honkairail = "^1.1.0"
aiohttp = "^3.9"
pydantic = "^1.10"
python = "^3.9"
cachetools = "^5.3.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
